# dynamatics-backend

./: README.md  detect_anamolies.py  forecast_preds.py  main.py  pyproject.toml  requirements.txt  sample_input.json  sample_input2.json  test_complex_flow.json  test_flow.json  test_merge_agg_flow.json  test_merge_flow.json  test_runner.py  token_usage_logs.csv
analy_env/: pyvenv.cfg
api/: dashboard.py  flows.py  tags.py
flow_graph/: andNode.py  anomaly.py  build_mock_schemas.py  data_source.py  filter.py  forecast.py  group.py  merge.py  mock_data_schemas.json  orNode.py  parser.py  pseudorunner.py  runner.py  sort.py
flow_graph/mock_data/: generate_timeseries.py  test.ndjson  test2.ndjson  timeseries.ndjson  timeseries_long.ndjson  timeseries_multi.ndjson
func/: anomaly.py  data_source.py  export.py  filter.py  forecast.py  merge.py  parser.py  runner.py  sort.py
server/api/: dashboard.py  db.py  flows.py  utils.py
server/docs/: render.py
server/middlewares/: security.py
test_data/: api_usage.ndjson  test_forecast_flow.json  test_forecast_methods.json
