[project]
name = "dynamatics-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "pandas>=2.3.3",
    "pymongo>=4.15.4",
    "python-dotenv>=1.2.1",
    "scalar-fastapi>=1.4.3",
    "uvicorn>=0.38.0",
]
